--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,7 @@
+- task: rapid7-insightappsec@1
+  inputs:
+    apiConnection: 'Bruce - InsightAppSec Test'
+    application: '22fabb28-75c0-44ef-a916-ebc79638ad66'
 # PHP
 # Test and package your PHP project.
 # Add steps that run tests, save build artifacts, deploy, and more:
